jupyter file added

--- a/final-week-quiz-Bala.ipynb
+++ b/final-week-quiz-Bala.ipynb
@@ -130,11 +130,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Sigmoid function used to map predictions to probabilities.\n",
+    "\n",
+    "Logistic regression is a classification algorithm<br>\n",
+    "<b>Example</b>\n",
+    "<li>Binary (Pass/Fail)</li>\n",
+    "<li>Multi (Cats, Dogs, Sheep)</li>\n",
+    "<li>Ordinal (Low, Medium, High)</li>"
+   ]
   },
   {
    "cell_type": "code",
@@ -151,11 +157,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<b>Bias</b> occurs when an algorithm has limited flexibility to learn the true signal from a dataset.<br>\n",
+    "High bias can cause to miss the relevant relations between features and target output which lead to inaccurate prediction <b>underfitting</b>\n",
+    "\n",
+    "<b>Variance</b> refers to an algorithm's sensitivity to specific sets of training data\n",
+    "High variance can cause <b>overfitting</b>"
+   ]
   },
   {
    "cell_type": "code",
@@ -172,17 +182,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Hyperparameters are usually fixed before the actual training process begins. it should be part of train, validation dataset\n",
+    "\n",
+    "Can be decided by setting different values, training different models, and choosing the values that test better\n",
+    "\n",
+    "Cannot be learned directly from the data in the standard model training process and need to be predefined.\n",
+    "\n",
+    "\n",
+    "<b>Hyperparameter Examples:</b>\n",
+    "<li>Number of leaves or depth of a tree</li>\n",
+    "<li>Number of hidden layers in a deep neural network</li>\n",
+    "<li>Number of clusters in a k-means clustering</li>"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -193,11 +211,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Cross validation is part of train and validation datasets<br>\n",
+    "model.best_params_ can be used to choose the best model"
+   ]
   },
   {
    "cell_type": "code",
@@ -214,11 +233,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<b>Parametric models</b>\n",
+    "we know y values <br>\n",
+    "\n",
+    "<b>Non-parametric model</b>\n",
+    "we don't know y values\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -235,11 +258,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Min Max Scaler - if we know the data range <br>\n",
+    "Standard Scaler - if we don't know the data range"
+   ]
   },
   {
    "cell_type": "code",
@@ -382,11 +406,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Two ways we can reduce the number if features in a model <br>\n",
+    "1. PCA <br>\n",
+    "2. Regularization <br>\n",
+    "\n",
+    "Note: Regularization preserves features, while PCA does not"
+   ]
   },
   {
    "cell_type": "code",
@@ -424,11 +452,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<b>forward propagation -></b> Train data run through all the neurons layer by layer into the final layer <br>\n",
+    "each neuron applies the activation function and calculates weight and Bias and pass the result to the next or final layer<br>\n",
+    "\n",
+    "<b>backward propagation -></b> adjust each weight in the network in proportion to how much it contributes to overall error. If we iteratively reduce each weight’s error, eventually we’ll have a series of weights the produce good predictions"
+   ]
   },
   {
    "cell_type": "code",
